welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell: error: not found: value answerCell
   t.setResult( answerCell( t.getParameter(0).asInstanceOf[Boolean], t.getParameter(1).asInstanceOf[Boolean], t.getParameter(2).asInstanceOf[Boolean]) )
                ^answerCell:1: error: not found: value public
public boolean answerCell(boolean isMorning, boolean isMom, boolean isAsleep) {
^